# llm-workshop

./: .gitignore  .talismanrc  LICENSE  README.md  llm-workshop-guidance.ipynb  llm-workshop-prompt-injection.ipynb  llm-workshop.ipynb  llm_workshop_prompt_injection.ipynb  llm_workshop_using_less_resources_4_exercises.ipynb  llmops_and_crafts.ipynb  llmops_and_crafts_solutions.ipynb  pyproject.toml
42/: llmops_and_crafts_solutions.ipynb
features/: evaluate.feature
features/resources/: jane_doe.txt  john_doe.txt
features/steps/: evaluation_steps.py
